--- a/src/DictionaryWordSearch.css
+++ b/src/DictionaryWordSearch.css
@@ -12,12 +12,12 @@
 
 .DictionaryWordSearch section {
   
-  border: 5px solid rgba(100, 34, 4, 0.993);
-  padding: 30px 0;
+  border: 4px solid rgba(116, 38, 3, 0.993);
+  padding: 20px 0px 7px;
   border-radius: 7px;
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.8);
-  margin: 20px 27px;
-  opacity: 0.85;
+  margin: 30px 27px;
+  opacity: 0.9;
 }
 
 .DictionaryWordSearch .hint-words {
