--- a/src/WordMeaning.css
+++ b/src/WordMeaning.css
@@ -1,23 +1,28 @@
 .WordMeaning h4 {
-    font-weight: bold;
-    color:#fdc070;
-   font-size: 27px;
+  font-weight: bold;
+  color: #fdc070;
+  font-size: 29px;
 }
 
 .WordMeaning p {
-    color:antiquewhite;
+  color: antiquewhite;
 }
 
 .WordMeaning .definition {
-    font-size: 19px;
+  font-size: 20px;
+  margin: 10px 0 20px;
 }
 
 .WordMeaning .bi-book {
-    font-size: 22px;
-    margin-right: 5px;
+  font-size: 18px;
+  margin-right: 5px;
+  color: #fac887;
 }
 
 .WordMeaning .example {
-    opacity: 0.7;
-    font-style: italic;
+  opacity: 0.8;
+  font-size: 15px;
+  margin-bottom: 20px;
+  color: #ffffff;
+  font-style: italic;
 }
